--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <p align="center" class="style2">Semoga Allah memberimu kesehatan, rezeki yang melimpah dan kesuksesan, serta umur panjang.</p>
     <p align="center" class="style2">Dan tak lupa, semoga kau juga diberi keberkahan juga makin bertambahnya iman dan Islam dalam hatimu, </p>
     <p align="center" class="style2">Dan semoga selalu dipermudah segala urusanmu aamiin Allahuma aamiin</p>
+    <p align="center" class="style2">Selamat menunaikan ibadah puasa</p>
     <p align="center" class="style2">"Rabbanaa hablanaa min azwaajinaa wa dzurriyyaatinaa qurrota a'yuni waj 'alnaa lilmuttaqiina imaama"</p>
     <center><input class="box-password" onclick="select()" type="text" value="HAPPY BIRTHDAY KUNYUK" />
     </center>
