--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     fl = 1
 
     function f1() {
-        alert("Terima kasih yaaa... Semoga Sehat selalu kunyukk... ")
+        alert("Terima kasih yaaa... Semoga Sehat selalu kunyukk Aamiinn... ")
     }
 
     function bn() {
