--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     function bn() {
-        alert("Terimakasih udah mau buka web ini")
+        alert("Terimakasih udah mau buka website ini <-_-> ")
     }
 
     function f() {
