--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
     <p align="center" class="style1">SELAMAT ULANG TAHUN SITI KHULIAH ^_^</p>
     <hr>
     <hr>
+    <p align="center" class="style2">Mabruuk alfa mabruuk ‘alaika mabruuk, Mabruuk alfa mabruuk yaum miiladik mabruuk!!!</p>
+    <p align="center" class="style2">Selamat hari milad Semoga dapat rahmat Dari Allahu Ahad Hingga hidup selamat!!!</p>
     <p align="center" class="style2">bertambah satu tahun lagi usiamu sekarang ini, dan hanya doa yang bisa aku berikan untukmu!!!</p>
     <p align="center" class="style2">Tidak ada nikmat yang paling indah selain umur yang panjang dan berkah yang telah ALLAH berikan untukmu</p>
     <p align="center" class="style2">Semoga Allah memberimu kesehatan, rezeki yang melimpah dan kesuksesan, serta umur panjang.</p>
